Added projects routes :)
